--- a/src/components/CardSwap.css
+++ b/src/components/CardSwap.css
@@ -13,7 +13,7 @@
   height: 400px;
 }
 
-.card {
+.card-swap-wrap .card {
   position: absolute;
   top: 50%;
   left: 50%;
